<resources>
    <string name="app_name">Store sale</string>
    <string name="txtNombres">Nombres completos</string>
    <string name="invalid_mail">Ingrese mail valido</string>
    <string name="invalid_password">Ingrese un password mayor a 6 digitos</string>
    <string name="etCorreosession">Ingrese su correo electronico</string>
    <string name="etContraseñasession">Ingrese su contraseña</string>
    <string name="tvInicionsession">INICIO DE SESION</string>
    <string name="ivTienda">Tienda</string>
    <string name="ivMarca">Marca</string>
    <string name="btnEntrar">Ingresar</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="tvRegistrese">REGISTRESE</string>
    <string name="etCorreo">Correo electronico</string>
    <string name="etContraseña">Contraseña</string>
    <string name="etPais">Seleccione su pais</string>
    <string name="etCiudad">Ciudad</string>
    <string name="etTipo">Seleccione su tipo de usuario</string>
    <string name="etTienda">Tienda</string>
    <string name="btnRegistrarse1">Registrarse</string>
    <string name="btnInicio">Volver al inicio</string>
    <string name="add_product">Agregar producto</string>
    <string name="pick_image">Seleccionar imagen</string>
    <string name="product_name">Nombre producto</string>
    <string name="product_description">Descripcion</string>
    <string name="product_stock">Unidades disponibles</string>
    <string name="product_price">Precio</string>
    <string name="product_category">Categoria</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_newProduc">Nuevo producto</string>
    <string name="btn_EditProduct">VER PRODUCTOS</string>
    <string name="btn_update">Actualizar</string>
    <string name="btn_menu">Regresar al Menu</string>
    <string name="btn_menu1">Regresar</string>
    <string name="EditProduct">EDITAR PRODUCTO</string>
    <string name="preference_file_key">data_usser</string>
    <string name="titleProducts">Productos</string>
    <string name="cantidad">Cantidad</string>
    <string name="addarrito">Agregar al carrito</string>
    <string name="Edit_product">EDITAR PRODUCTO</string>
    <string name="enblanco"></string>

    <string name="item_close">Cerrar Sesion</string>
    <string name="item_new">Producto Nuevo</string>
    <string name="item_user">Perfil</string>
    <string name="item_Lista">Ventas</string>
    <string name="item_ListaProductos">Lista de Productos</string>
    <string name="btn_buy">Comprar</string>
    <string name="direccion">Direccion de entrega</string>
    <string name="total">Total</string>
    <string name="item_Compras">Lista de Compras</string>
    <string name="fecha">Fecha</string>
    <string name="cliente">Cliente</string>
</resources>