<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/ivImageProductList"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:padding="10dp"
                    android:src="@drawable/producto" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvFechaList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enblanco"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tvNameList1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/product_name"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvNameList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvCantidadList1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/cantidad"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCantidadList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvTotalList1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvTotalList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enblanco"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvDireccionList1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/direccion"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDireccionList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enblanco"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvTiendaList1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/etTienda"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvTiendaList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enblanco"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>